Création de l'entité client

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=
 index.file=
 run.as=LOCAL
-url=http://localhost/ProjetWebRest/
+url=http://localhost/CesiRest/
